clusters/cl01tl/manifests/bazarr/Deployment-bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bazarr
    helm.sh/chart: bazarr-5.2.1
  namespace: bazarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: bazarr
      app.kubernetes.io/instance: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: bazarr
        app.kubernetes.io/name: bazarr
    spec:
      enableServiceLinks: false
      serviceAccountName: bazarr
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: TZ
              value: America/Chicago
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: BAZARR_API_KEY
              valueFrom:
                secretKeyRef:
                  key: key
                  name: bazarr-key
          image: ghcr.io/linuxserver/bazarr:v1.6.2-ls366@sha256:8b30e81c4aec2991f469e78fae8afaa89ecc9b21a80e3897f50427216b55470c
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - wget -qO- http://127.0.0.1:6767/api/system/status?apikey=$BAZARR_API_KEY || exit 1
            initialDelaySeconds: 60
            timeoutSeconds: 10
          name: main
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - wget -qO- http://127.0.0.1:6767/api/system/status?apikey=$BAZARR_API_KEY || exit 1
            initialDelaySeconds: 60
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 250Mi
          startupProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - wget -qO- http://127.0.0.1:6767/api/system/status?apikey=$BAZARR_API_KEY || exit 1
            initialDelaySeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/store
              name: media
        - args:
            - bazarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
          name: metrics
        - env:
            - name: OAUTH2_PROXY_HTTP_ADDRESS
              value: 0.0.0.0:4180
            - name: OAUTH2_PROXY_METRICS_ADDRESS
              value: 0.0.0.0:44180
            - name: OAUTH2_PROXY_UPSTREAMS
              value: http://localhost:6767
            - name: OAUTH2_PROXY_PROVIDER
              value: oidc
            - name: OAUTH2_PROXY_CODE_CHALLENGE_METHOD
              value: S256
            - name: OAUTH2_PROXY_SKIP_PROVIDER_BUTTON
              value: "true"
            - name: OAUTH2_PROXY_EMAIL_DOMAINS
              value: '*'
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5@sha256:8498b0d0ef0a7b29686414000a08aee467f02d0299c9ed1e006a8f33fc017916
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
          name: oauth
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: bazarr-nfs-storage
