clusters/cl01tl/manifests/bazarr/Service-bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/service: bazarr
    helm.sh/chart: bazarr-5.2.1
  namespace: bazarr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 6767
      protocol: TCP
      name: http
    - port: 9792
      targetPort: 9792
      protocol: TCP
      name: metrics
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: oauth
    - port: 44180
      targetPort: 44180
      protocol: TCP
      name: oauth-metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/name: bazarr
