clusters/cl01tl/manifests/bazarr/HTTPRoute-bazarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bazarr
    helm.sh/chart: bazarr-5.2.1
  annotations:
    gethomepage.dev/description: Bazarr
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Content
    gethomepage.dev/icon: sh-bazarr.webp
    gethomepage.dev/name: Subtitles
    gethomepage.dev/podSelector: ""
    gethomepage.dev/siteMonitor: http://bazarr.bazarr:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "300"
  namespace: bazarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "bazarr.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bazarr
          namespace: bazarr
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
