clusters/cl01tl/manifests/bazarr/HTTPRoute-http-route-bazarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-bazarr
  namespace: bazarr
  labels:
    app.kubernetes.io/name: http-route-bazarr
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/part-of: bazarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - bazarr.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: bazarr
          port: 80
          weight: 100
